# sift

./: .env.example  .env.test.example  .gitignore  .gitleaks.toml  8-agent-memory-systems-vs-sift.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.txtai  Dockerfile.txtai-cpu  LICENSE  NOTICE  README.md  SECURITY.md  config.test.yml  config.yml  custom-requirements.txt  docker-compose.cpu.yml  docker-compose.test.yml  docker-compose.yml  qdrant_txtai-2.0.0-py3-none-any.whl
.github/: PULL_REQUEST_TEMPLATE.md
SDD/: IMPLEMENTATION-COMPLETE-040.md
archive/: config-hybrid.yml  config-sqlite.yml  custom-requirements-fork.txt
custom_actions/: __init__.py  ollama_captioner.py  ollama_classifier.py  ollama_embeddings.py  ollama_vectors.py  whisper_transcriber.py
docs/: BEST-PRACTICES-DOCUMENT-SUMMARIZATION.md  CHANGELOG_QDRANT_FIX.md  CLEANUP_SUMMARY.md  DATA-STORAGE.md  DATA_STORAGE_GUIDE.md  INCREMENTAL_INDEXING_FIX.md  KNOWLEDGE-GRAPH.md  LOGGING.md  OLLAMA_INTEGRATION.md  PROJECT_STRUCTURE.md  (+5 more)
mcp_server/: .mcp-local.json  .mcp-remote.json  Dockerfile  FINAL-TESTING-REPORT.md  PERFORMANCE-BENCHMARKS.md  README.md  SCHEMAS.md  benchmark_performance.py  benchmark_simple.py  populate_test_data.py  pyproject.toml  run_benchmark.sh  test_graphiti_tool.sh  test_mcp_local.sh  txtai_rag_mcp.py
mcp_server/graphiti_integration/: __init__.py  graphiti_client_async.py
mcp_server/tests/: __init__.py  conftest.py  test_errors.py  test_graphiti.py  test_knowledge_summary.py  test_knowledge_summary_integration.py  test_tools.py  test_validation.py
(+432 files in other folders)
