[project]
name = "txtai-rag-mcp"
version = "1.0.0"
description = "MCP server for txtai semantic search and RAG integration with Claude Code"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pablo Oliva" }
]

dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.28.0",
    "graphiti-core==0.26.3",  # SPEC-037/SPEC-038: Graphiti SDK (pinned to match frontend, BUG-E2E-004 fix)
    "neo4j>=5.0.0,<6.0.0",    # SPEC-037: Neo4j driver (major version pinned)
    "psycopg2-binary>=2.9.0",  # SPEC-038: PostgreSQL access for chunk detection
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include main module and graphiti_integration package
packages = ["graphiti_integration"]
# Specify which Python modules to include directly
include = [
    "txtai_rag_mcp.py",
]

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
# SPEC-037: Register custom pytest marks
markers = [
    "integration: marks tests as integration tests (requires real services like Neo4j)",
]
asyncio_mode = "auto"
